# tradeoff_research

tradeoff/: README.md  model_config\KJD1_e0.1.txt  model_config\KJD1_e0.2.txt  model_config\KJD1_e0.3.txt  model_config\KJD1_e0.4.txt  model_config\KJD1_e0.5.txt  model_config\KJD1_e0.6.txt  model_config\KJD1_e0.7.txt  model_config\KJD1_e0.8.txt  model_config\KJD1_e0.9.txt  model_config\KJD2_e0.1.txt  model_config\KJD2_e0.2.txt  model_config\KJD2_e0.3.txt  model_config\KJD2_e0.4.txt  model_config\KJD2_e0.5.txt  model_config\KJD2_e0.6.txt  model_config\KJD2_e0.7.txt  model_config\KJD2_e0.8.txt  model_config\KJD2_e0.9.txt  model_config\UJD1_e0.1.txt  model_config\UJD1_e0.2.txt  model_config\UJD1_e0.3.txt  model_config\UJD1_e0.4.txt  model_config\UJD1_e0.5.txt  model_config\UJD1_e0.6.txt  model_config\UJD1_e0.7.txt  model_config\UJD1_e0.8.txt  model_config\UJD1_e0.9.txt  model_config\UJD2_e0.1.txt  model_config\UJD2_e0.2.txt  model_config\UJD2_e0.3.txt  model_config\UJD2_e0.4.txt  model_config\UJD2_e0.5.txt  model_config\UJD2_e0.6.txt  model_config\UJD2_e0.7.txt  model_config\UJD2_e0.8.txt  model_config\UJD2_e0.9.txt  pyproject.toml
tradeoff/config/: FIFO_c100_js1.txt  FIFO_js1_c100.txt  KJD1_js1.txt  KJD2_js1.txt  UJD1_js1.txt  UJD2_js1.txt  rl_js1.txt  rl_rr01_m100_js1.txt  rl_rr02_m100_js1.txt  rl_rr03_m100_js1.txt  rl_rr04_m100_js1.txt  rl_rr06_m100_js1.txt  rl_rr09_m100_js1.txt  rl_rr13_m100_js1.txt  rl_rr19_m100_js1.txt  rl_rr28_m100_js1.txt  rl_rr41_m100_js1.txt  rl_train_js1.txt
tradeoff/job_config/: rl_test_js1.txt  rl_train_continuous_js1.txt
(+223 files in other folders)
